# jbd-gis

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  version.json
.githooks/: pre-commit
.github/workflows/: README.md  ci.yml  deploy.yml
apps/: README.md
apps/gis-api/: Dockerfile  Program.cs  README.md  appsettings.Development.json  gis-api.csproj
apps/gis-api/Controllers/: HealthController.cs  VersionController.cs
apps/gis-engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/gis-engine/docs/: terrain-pipeline.md
apps/gis-engine/src/gis_engine/: __init__.py  __main__.py  cli.py  config.py  storage.py  terrain.py
apps/gis-engine/tests/: test_cli.py
apps/gis-web/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  scratch-verify.mjs  vite.config.ts
apps/gis-web/public/: _redirects
apps/gis-web/src/: App.test.tsx  App.tsx  README.md  architecture.test.ts  index.css  main.tsx
apps/gis-web/src/app/: README.md  providers.tsx  router.test.ts  router.tsx
apps/gis-web/src/components/: README.md
apps/gis-web/src/features/: README.md
apps/gis-web/src/lib/: README.md  utils.ts
apps/gis-web/src/styles/: README.md  themes.css  tokens.css
docs/: README.md  architecture.md  design-system.md  structure.md
docs/adr/: 001-monorepo-structure.md  002-tech-stack.md  003-infra-layout.md  004-frontend-architecture.md  005-compute-placement.md
infra/: README.md  docker-compose.yml
infra/nginx/: nginx.conf
scripts/: README.md  dev.sh  update-structure.sh
(+40 files in other folders)
