[project]
name = "gis-engine"
version = "0.0.0"
description = "Offline batch computation tier for the GIS platform."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rasterio>=1.3",
    "numpy>=1.26",
    "mercantile>=1.2",
    "pillow>=10.0",
    "pmtiles>=3.0",
    "boto3>=1.34",
    "python-dotenv>=1.0",
]

[project.scripts]
gis-engine = "gis_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gis_engine"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["rasterio.*", "mercantile.*", "pmtiles.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true
